k8s/apps/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.armleth.fr`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls:
    secretName: keycloak-tls-secret
